deployment-cursos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msvc-cursos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msvc-cursos
  template:
    metadata:
      labels:
        app: msvc-cursos
    spec:
      containers:
      - image: miguelrodriguez15/msvc-cursos:latest
        imagePullPolicy: Always
        name: cursos
        ports:
        - containerPort: 8002
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8002
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 30
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8002
          periodSeconds: 15
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8002
          periodSeconds: 10
          failureThreshold: 3
        resources:
          requests:
            memory: "512Mi"
            cpu: "400m"
          limits:
            memory: "800Mi"
            cpu: "500m"
