deployment-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql8
  template:
    metadata:
      labels:
        app: mysql8
    spec:
      containers:
        - image: mysql:8.0
          name: mysql8
          ports:
            - containerPort: 3307
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc
