deployment-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres14
spec:
  replicas: 1
  selector:
    matchLabels:
      role: postgres
  template:
    metadata:
      labels:
        role: postgres
    spec:
      containers:
        - name: postgres14
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
