auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msvc-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msvc-auth
  template:
    metadata:
      labels:
        app: msvc-auth
    spec:
      containers:
      - image: miguelrodriguez15/msvc-auth:latest
        name: msvc-auth
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: msvc-auth
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: msvc-auth
  type: LoadBalancer
