svc-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres14
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    role: postgres
  type: ClusterIP
