svc-usuarios.yaml
apiVersion: v1
kind: Service
metadata:
  name: msvc-usuarios
spec:
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    app: msvc-usuarios
  sessionAffinity: ClientIP
  type: LoadBalancer
